--- a/index.html
+++ b/index.html
@@ -38,10 +38,20 @@
         </nav>
         <ul class="header-contacts list">
           <li>
-            <a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contact-mail link" href="mailto:info@devstudio.com">
+              <svg class="contact-icon mail">
+                <use href="./images/icons/sprite.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
           </li>
           <li>
-            <a class="contact-phone-number link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="contact-phone-number link" href="tel:+380961111111"
+              ><svg class="contact-icon phone">
+                <use href="./images/icons/sprite.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -63,24 +73,56 @@
           <h2 class="peculiarities-title">Особливості</h2>
           <ul class="peculiarities list">
             <li class="peculiarities-item">
+              <div class="peculiarities-box">
+                <svg class="peculiarities-icon">
+                  <use
+                    href="./images/icons/sprite.svg#icon-antenna"
+                    width="70px"
+                    height="70px"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="peculiarities-subtitle">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="peculiarities-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
             <li class="peculiarities-item">
+              <div class="peculiarities-box">
+                <svg class="peculiarities-icon">
+                  <use href="./images/icons/sprite.svg#icon-clock" width="70px" height="70px"></use>
+                </svg>
+              </div>
               <h3 class="peculiarities-subtitle">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="peculiarities-text">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
             <li class="peculiarities-item">
+              <div class="peculiarities-box">
+                <svg class="peculiarities-icon">
+                  <use
+                    href="./images/icons/sprite.svg#icon-diagram"
+                    width="70px"
+                    height="70px"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="peculiarities-subtitle">ПЛАНУВАННЯ</h3>
               <p class="peculiarities-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="peculiarities-item">
+              <div class="peculiarities-box">
+                <svg class="peculiarities-icon">
+                  <use
+                    href="./images/icons/sprite.svg#icon-astronaut"
+                    width="70px"
+                    height="70px"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="peculiarities-subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="peculiarities-text">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -135,6 +177,36 @@
               />
               <h3 class="name">Ігор Дем'яненко</h3>
               <p class="function" lang="en">Product Designer</p>
+              <ul class="icons list">
+                <li class="net">
+                  <a href="" class="net"
+                    ><svg class="networks" width="20px" height="20px">
+                      <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="net">
+                  <a href="" class="net"
+                    ><svg class="networks" width="20px" height="20px">
+                      <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="net">
+                  <a href="" class="net"
+                    ><svg class="networks" width="20px" height="20px">
+                      <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="net">
+                  <a href="" class="net"
+                    ><svg class="networks" width="20px" height="20px">
+                      <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team-item">
               <img
@@ -145,6 +217,36 @@
               />
               <h3 class="name">Ольга Рєпіна</h3>
               <p class="function" lang="en">Frontend Developer</p>
+              <ul class="icons list">
+                <li class="net">
+                  <a href="" class="net"
+                    ><svg class="networks" width="20px" height="20px">
+                      <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="net">
+                  <a href="" class="net"
+                    ><svg class="networks" width="20px" height="20px">
+                      <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="net">
+                  <a href="" class="net"
+                    ><svg class="networks" width="20px" height="20px">
+                      <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="net">
+                  <a href="" class="net"
+                    ><svg class="networks" width="20px" height="20px">
+                      <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team-item">
               <img
@@ -155,6 +257,36 @@
               />
               <h3 class="name">Микола Тарасов</h3>
               <p class="function" lang="en">Marketing</p>
+              <ul class="icons list">
+                <li class="net">
+                  <a href="" class="net"
+                    ><svg class="networks" width="20px" height="20px">
+                      <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="net">
+                  <a href="" class="net"
+                    ><svg class="networks" width="20px" height="20px">
+                      <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="net">
+                  <a href="" class="net"
+                    ><svg class="networks" width="20px" height="20px">
+                      <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="net">
+                  <a href="" class="net"
+                    ><svg class="networks" width="20px" height="20px">
+                      <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team-item">
               <img
@@ -165,33 +297,150 @@
               />
               <h3 class="name">Михайло Єрмаков</h3>
               <p class="function" lang="en">UI Designer</p>
+              <ul class="icons list">
+                <li class="net">
+                  <a href="" class="net"
+                    ><svg class="networks" width="20px" height="20px">
+                      <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="net">
+                  <a href="" class="net"
+                    ><svg class="networks" width="20px" height="20px">
+                      <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="net">
+                  <a href="" class="net"
+                    ><svg class="networks" width="20px" height="20px">
+                      <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="net">
+                  <a href="" class="net"
+                    ><svg class="networks" width="20px" height="20px">
+                      <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Clients -->
+      <section class="clients-section">
+        <div class="container">
+          <h2 class="subtitle">Постійні клієнти</h2>
+          <ul class="clients list">
+            <li class="clients-item">
+              <a href="" class="clients-link link"
+                ><svg class="clients-icon">
+                  <use href="./images/icons/sprite.svg#icon-client1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link link"
+                ><svg class="clients-icon">
+                  <use href="./images/icons/sprite.svg#icon-client2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link link"
+                ><svg class="clients-icon">
+                  <use href="./images/icons/sprite.svg#icon-client3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link link"
+                ><svg class="clients-icon">
+                  <use href="./images/icons/sprite.svg#icon-client4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link link"
+                ><svg class="clients-icon">
+                  <use href="./images/icons/sprite.svg#icon-client5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link link"
+                ><svg class="clients-icon">
+                  <use href="./images/icons/sprite.svg#icon-client6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <!-- Footer -->
-    <footer id="contacts" class="footer">
-      <div class="container">
-        <a class="logo link" href="./index.html">Web<span class="logo-theme-light">Studio</span></a>
-        <address>
-          <ul class="contact list">
-            <li>
-              <a
-                class="contact-item link location"
-                href="https://maps.app.goo.gl/FXQyrRYmAxvrxMt37"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                м. Київ, пр-т Лесі Українки, 26
+    <footer id="contacts">
+      <div class="container footer">
+        <div class="adress">
+          <a class="logo link" href="./index.html"
+            >Web<span class="logo-theme-light">Studio</span></a
+          >
+          <address>
+            <ul class="contact list">
+              <li>
+                <a
+                  class="contact-item link location"
+                  href="https://maps.app.goo.gl/FXQyrRYmAxvrxMt37"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  м. Київ, пр-т Лесі Українки, 26
+                </a>
+              </li>
+              <li>
+                <a class="contact-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li><a class="contact-item link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+          </address>
+        </div>
+        <div class="join">
+          <h3 class="join">ПРИЄДНУЙТЕСЬ</h3>
+          <ul class="join list">
+            <li class="join">
+              <a href="" class="join"
+                ><svg class="join" width="20px" height="20px">
+                  <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                </svg>
               </a>
             </li>
-            <li>
-              <a class="contact-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="join">
+              <a href="" class="join"
+                ><svg class="join" width="20px" height="20px">
+                  <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li><a class="contact-item link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li class="join">
+              <a href="" class="join"
+                ><svg class="join" width="20px" height="20px">
+                  <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="join">
+              <a href="" class="join"
+                ><svg class="join" width="20px" height="20px">
+                  <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
