--- a/portfolio.html
+++ b/portfolio.html
@@ -37,10 +37,20 @@
         </nav>
         <ul class="header-contacts list">
           <li>
-            <a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contact-mail link" href="mailto:info@devstudio.com"
+              ><svg class="contact-icon mail">
+                <use href="./images/icons/sprite.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li>
-            <a class="contact-phone-number link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="contact-phone-number link" href="tel:+380961111111"
+              ><svg class="contact-icon phone">
+                <use href="./images/icons/sprite.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -173,27 +183,64 @@
       </section>
     </main>
     <!-- Footer -->
-    <footer id="contacts" class="footer">
-      <div class="container">
-        <a class="logo link" href="./index.html">Web<span class="logo-theme-light">Studio</span></a>
-        <address>
-          <ul class="contact list">
-            <li>
-              <a
-                class="contact-item link location"
-                href="https://maps.app.goo.gl/FXQyrRYmAxvrxMt37"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                м. Київ, пр-т Лесі Українки, 26
+    <footer id="contacts">
+      <div class="container footer">
+        <div class="adress">
+          <a class="logo link" href="./index.html"
+            >Web<span class="logo-theme-light">Studio</span></a
+          >
+          <address>
+            <ul class="contact list">
+              <li>
+                <a
+                  class="contact-item link location"
+                  href="https://maps.app.goo.gl/FXQyrRYmAxvrxMt37"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  м. Київ, пр-т Лесі Українки, 26
+                </a>
+              </li>
+              <li>
+                <a class="contact-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li><a class="contact-item link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+          </address>
+        </div>
+        <div class="join">
+          <h3 class="join">ПРИЄДНУЙТЕСЬ</h3>
+          <ul class="join list">
+            <li class="join">
+              <a href="" class="join"
+                ><svg class="join" width="20px" height="20px">
+                  <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                </svg>
               </a>
             </li>
-            <li>
-              <a class="contact-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="join">
+              <a href="" class="join"
+                ><svg class="join" width="20px" height="20px">
+                  <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li><a class="contact-item link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li class="join">
+              <a href="" class="join"
+                ><svg class="join" width="20px" height="20px">
+                  <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="join">
+              <a href="" class="join"
+                ><svg class="join" width="20px" height="20px">
+                  <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
